--- a/css-layout-classes/styles.css
+++ b/css-layout-classes/styles.css
@@ -1,33 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
+
 .container {
   max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 .row {
   display: flex;
 }
 
-.row .img {
-  width: calc(100% / 2);
+.image {
+  width: 100%;
 }
 
-.row img {
-  width: 150px;
+.first-column {
+  width: calc(100% / 3);
 }
 
-.row .image img {
-  width: 200px;
-  height: auto;
+.third-column {
+  width: calc(100% / 3*2);
 }
 
-.row .text p {
-  font-size: 100%;
-  margin: 10px 0;
-  padding: 0 10px;
-}
-
-.row .text h2 {
-  margin: 10px 0;
-  padding: 0 10px;
+.second-column {
+  width: 25%;
 }
