--- a/css-brochure-form/styles.css
+++ b/css-brochure-form/styles.css
@@ -1,59 +1,53 @@
-.header {
-  font-family: AtlasGrotesk, sans-serif;
-  text-transform: uppercase;
-  text-align: center;
-  display: block;
-  color: #ff704d;
-  letter-spacing: 1px;
-  font-size: 10px;
+body {
+  font-family: "Brandon Grotesque", sans-serif;
 }
 
-.container {
-  justify-content: center;
+section {
   display: flex;
+  justify-content: center;
 }
 
-input {
-  font-family: AtlasGrotesk, sans-serif;
-  display: block;
-  padding: 10px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  width: 400px;
-  border: #b8b8b8 1px solid;
-  border-radius: 4px;
-  color: #000;
-  letter-spacing: 0.5px;
+h3 {
+  align-content: flex-start;
+  color: #fc6d57;
+  margin: 15px auto 10px;
+}
+
+div.form-input {
+  margin-bottom: 10px;
 }
 
 label {
-  text-align: center;
-  justify-content: center;
-  font-size: 80%;
-  font-family: "Brandon Grotesque", sans-serif;
-  letter-spacing: 0.7px;
-  padding-left: 10px;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 0 0 2px 10px;
+  letter-spacing: 0.5px;
 }
 
 select {
-  background-color: #e8e8e8;
-  display: block;
-  padding: 12px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  width: 400px;
-  border: #b8b8b8 1px solid;
-  border-radius: 4px;
   font-family: "Brandon Grotesque", sans-serif;
+  background-color: rgb(242 241 241);
+  padding: 10px 0 10px 2px;
+}
+
+input {
+  padding: 10px;
+  font-family: AtlasGrotesk, sans-serif;
+}
+
+input,
+select {
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  width: 450px;
 }
 
 button {
-  font-family: "Brandon Grotesque", sans-serif;
-  background-color: #ff704d;
-  border: 1px #ff704d;
-  border-radius: 25px;
-  font-size: 15px;
+  background-color: #fc6d57;
   color: white;
-  text-align: center;
-  padding: 10px 20px;
+  border: #fc715b;
+  border-radius: 30px;
+  padding: 10px 15px;
+  width: 90px;
+  margin: 0 0 0 360px;
 }
