--- a/css-three-column-layout/styles.css
+++ b/css-three-column-layout/styles.css
@@ -1,41 +1,55 @@
-body {
-  background-color: #42a1f5;
-}
-
-h2 {
+div.container {
+  background-color: #00abf5;
+  font-family: lato, sans-serif;
   color: white;
+  border-color: #00abf5;
+  padding-top: 50px;
+  padding-bottom: 50px;
   text-align: center;
-  font-family: Lato, sans-serif;
 }
 
-section {
-  color: white;
+div.row {
   display: flex;
-  text-align: center;
-  font-family: Lato, sans-serif;
-  margin: 40px;
+  justify-content: center;
+  width: 1024px;
+  margin: 0 auto;
 }
 
-.sec {
-  padding: 45px;
+div.col-3 {
+  flex-basis: calc(100%/3);
+  margin: 0 30px;
 }
 
-.sec > p {
-  color: #d3d3d3;
-  line-height: 25px;
-  display: block;
+div.circle-col-3 {
+  flex-basis: calc(100%/6);
+  padding: 0 30px;
+  margin: auto;
 }
 
-.image {
-  display: inline-block;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
+div.circle {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 img {
-  padding: 15px;
-  margin: 25px;
-  width: 100px;
+  width: 50%;
+}
+
+p {
+  font-size: 0.75rem;
+}
+
+h3 {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 1.9rem;
 }
