--- a/javascript-light-bulb/styles.css
+++ b/javascript-light-bulb/styles.css
@@ -3,18 +3,37 @@
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
   margin: 0;
-  background: black;
 }
 
-div {
-  position: relative;
+main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #f5f5669e;
+  box-shadow: 20px 20px 80px rgb(255 235 59 / 47.4%);
+  border: none;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  background: grey;
+  margin: 150px;
+}
+
+.background {
+  background-color: #eeebcc;
+}
+
+.button.off {
+  background-color: #32322d9e;
+  box-shadow: 20px 20px 80px rgb(74 74 71 / 47.4%);
+}
+
+.background.off {
+  background-color: black;
 }
